# docs/swagger.json
@@ -73,7 +73,7 @@
                 "tags": [
                     "文章相关接口"
                 ],
-                "summary": "通过post_id删除文章",
+                "summary": "通过postId删除文章",
                 "parameters": [
                     {
                         "type": "string",
@@ -84,8 +84,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "需要删除的post_id",
-                        "name": "post_id",
+                        "description": "需要删除的postId",
+                        "name": "postId",
                         "in": "query",
                         "required": true
                     }
@@ -116,7 +116,7 @@
                 "tags": [
                     "文章相关接口"
                 ],
-                "summary": "管理员通过post_id获取文章全部数据",
+                "summary": "管理员通过postId获取文章全部数据",
                 "parameters": [
                     {
                         "type": "string",
@@ -127,8 +127,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "需要查询的post_id",
-                        "name": "post_id",
+                        "description": "需要查询的postId",
+                        "name": "postId",
                         "in": "query",
                         "required": true
                     }
@@ -159,7 +159,7 @@
                 "tags": [
                     "文章相关接口"
                 ],
-                "summary": "通过post_id获取文章视图",
+                "summary": "通过postId获取文章视图",
                 "parameters": [
                     {
                         "type": "string",
@@ -171,7 +171,7 @@
                     {
                         "type": "string",
                         "description": "需要查找的文章id",
-                        "name": "post_id",
+                        "name": "postId",
                         "in": "query",
                         "required": true
                     }
@@ -517,7 +517,7 @@
                 "tags": [
                     "用户相关接口"
                 ],
-                "summary": "管理员根据user_id删除用户",
+                "summary": "管理员根据userId删除用户",
                 "parameters": [
                     {
                         "type": "string",
@@ -528,8 +528,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "需要删除的user_id",
-                        "name": "user_id",
+                        "description": "需要删除的userId",
+                        "name": "userId",
                         "in": "query",
                         "required": true
                     }
@@ -560,7 +560,7 @@
                 "tags": [
                     "用户相关接口"
                 ],
-                "summary": "管理员根据user_id查询用户完整信息",
+                "summary": "管理员根据userId查询用户完整信息",
                 "parameters": [
                     {
                         "type": "string",
@@ -571,8 +571,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "需要查询的user_id",
-                        "name": "user_id",
+                        "description": "需要查询的userId",
+                        "name": "userId",
                         "in": "query",
                         "required": true
                     }
@@ -639,7 +639,7 @@
                 "tags": [
                     "用户相关接口"
                 ],
-                "summary": "根据user_id查找用户视图",
+                "summary": "根据userId查找用户视图",
                 "parameters": [
                     {
                         "type": "string",
@@ -651,7 +651,7 @@
                     {
                         "type": "string",
                         "description": "需要查找的用户id",
-                        "name": "user_id",
+                        "name": "userId",
                         "in": "query",
                         "required": true
                     }
@@ -884,7 +884,7 @@
                 "tags": [
                     "用户相关接口"
                 ],
-                "summary": "管理员根据user_id更新用户信息",
+                "summary": "管理员根据userId更新用户信息",
                 "parameters": [
                     {
                         "type": "string",
@@ -1017,14 +1017,14 @@
             "type": "object",
             "required": [
                 "content",
-                "post_id",
+                "postId",
                 "title"
             ],
             "properties": {
                 "content": {
                     "type": "string"
                 },
-                "post_id": {
+                "postId": {
                     "type": "string",
                     "example": "0"
                 },
@@ -1037,22 +1037,22 @@
             "type": "object",
             "required": [
                 "content",
-                "post_id",
+                "postId",
                 "title",
-                "user_id"
+                "userId"
             ],
             "properties": {
                 "content": {
                     "type": "string"
                 },
-                "post_id": {
+                "postId": {
                     "type": "string",
                     "example": "0"
                 },
                 "title": {
                     "type": "string"
                 },
-                "user_id": {
+                "userId": {
                     "type": "string",
                     "example": "0"
                 }
@@ -1063,7 +1063,7 @@
             "required": [
                 "account",
                 "password",
-                "re_password"
+                "rePassword"
             ],
             "properties": {
                 "account": {
@@ -1072,7 +1072,7 @@
                 "password": {
                     "type": "string"
                 },
-                "re_password": {
+                "rePassword": {
                     "type": "string"
                 }
             }
@@ -1097,7 +1097,7 @@
             "required": [
                 "account",
                 "password",
-                "re_password"
+                "rePassword"
             ],
             "properties": {
                 "account": {
@@ -1106,7 +1106,7 @@
                 "password": {
                     "type": "string"
                 },
-                "re_password": {
+                "rePassword": {
                     "type": "string"
                 }
             }
@@ -1115,7 +1115,7 @@
             "type": "object",
             "required": [
                 "account",
-                "user_id"
+                "userId"
             ],
             "properties": {
                 "account": {
@@ -1136,14 +1136,14 @@
                 "phone": {
                     "type": "string"
                 },
-                "re_password": {
+                "rePassword": {
                     "type": "string"
                 },
-                "user_id": {
+                "userId": {
                     "type": "string",
                     "example": "0"
                 },
-                "user_role": {
+                "userRole": {
                     "type": "integer"
                 }
             }
@@ -1152,7 +1152,7 @@
             "type": "object",
             "required": [
                 "account",
-                "user_id"
+                "userId"
             ],
             "properties": {
                 "account": {
@@ -1173,10 +1173,10 @@
                 "phone": {
                     "type": "string"
                 },
-                "re_password": {
+                "rePassword": {
                     "type": "string"
                 },
-                "user_id": {
+                "userId": {
                     "type": "string",
                     "example": "0"
                 }
