# model/user.go
@@ -6,14 +6,14 @@ import "gorm.io/gorm"
 type User struct {
 	gorm.Model
 
-	UserId      int64   `json:"user_id" gorm:"not null"`
+	UserId      int64   `json:"userId" gorm:"not null"`
 	Account     string  `json:"account" gorm:"not null;unique"`
 	Password    string  `json:"password" gorm:"not null"`
 	Phone       *string `json:"phone"`
 	Email       *string `json:"email"`
 	Description *string `json:"description"`
 	Gender      bool    `json:"gender"`
-	UserRole    uint8   `json:"user_role" gorm:"comment:0-普通用户 1-管理员;size:2"`
+	UserRole    uint8   `json:"userRole" gorm:"comment:0-普通用户 1-管理员;size:2"`
 }
 
 // UserDTOLogin 用户登录所需要绑定的参数
@@ -26,22 +26,22 @@ type UserDTOLogin struct {
 type UserDTORegister struct {
 	Account    string `json:"account" binding:"required"`
 	Password   string `json:"password" binding:"required"`
-	RePassword string `json:"re_password" binding:"required,eqfield=Password"`
+	RePassword string `json:"rePassword" binding:"required,eqfield=Password"`
 }
 
 // UserDTOAdd 用户登录所需要绑定的参数
 type UserDTOAdd struct {
 	Account    string `json:"account" binding:"required"`
 	Password   string `json:"password" binding:"required"`
-	RePassword string `json:"re_password" binding:"required,eqfield=Password"`
+	RePassword string `json:"rePassword" binding:"required,eqfield=Password"`
 }
 
 // UserDTOUpdateBySelf 用户更新参数
 type UserDTOUpdateBySelf struct {
-	UserId      int64   `json:"user_id,string" binding:"required"`
+	UserId      int64   `json:"userId,string" binding:"required"`
 	Account     string  `json:"account" binding:"required"`
 	Password    string  `json:"password"`
-	RePassword  string  `json:"re_password"`
+	RePassword  string  `json:"rePassword"`
 	Description *string `json:"description"`
 	Phone       *string `json:"phone"`
 	Email       *string `json:"email"`
@@ -50,25 +50,25 @@ type UserDTOUpdateBySelf struct {
 
 // UserDTOUpdateByAdmin 用户更新参数
 type UserDTOUpdateByAdmin struct {
-	UserId      int64   `json:"user_id,string" binding:"required"`
+	UserId      int64   `json:"userId,string" binding:"required"`
 	Account     string  `json:"account" binding:"required"`
 	Password    string  `json:"password"`
-	RePassword  string  `json:"re_password"`
+	RePassword  string  `json:"rePassword"`
 	Description *string `json:"description"`
 	Phone       *string `json:"phone"`
 	Email       *string `json:"email"`
 	Gender      bool    `json:"gender"`
-	UserRole    uint8   `json:"user_role"`
+	UserRole    uint8   `json:"userRole"`
 }
 
 // UserVO 登录成功返回给前端展示的用户数据
 type UserVO struct {
-	UserId      int64   `json:"user_id,string"`
+	UserId      int64   `json:"userId,string"`
 	Account     string  `json:"account"`
 	Token       *string `json:"token,omitempty"`
 	Description *string `json:"description,omitempty"`
 	Phone       *string `json:"phone,omitempty"`
 	Email       *string `json:"email,omitempty"`
 	Gender      bool    `json:"gender"`
-	UserRole    uint8   `json:"user_role"`
+	UserRole    uint8   `json:"userRole"`
 }
